TODO无法显示，因此修改成普通的大纲条目显示

--- a/README.org
+++ b/README.org
@@ -2,12 +2,12 @@
 ** 简介
 - 近段时间感觉时间全都耗费在了公司，也不是一个很好的状态。自己的生活空间全都压榨没了，接下来还是得给自己找点东西做一下。想到自己的手中还有一个小小的Arduino，开始折腾一下吧！
 ** TDL
-*** TODO 找到原理图、开发工具
-*** TODO 完成hello world的程序
-*** TODO 完成LED的闪烁
-*** TODO 延时操作
-*** TODO 定时器
-*** TODO 任务调度器
-*** TODO 串口初步
-*** TODO SPI
+*** 找到原理图、开发工具
+*** 完成hello world的程序
+*** 完成LED的闪烁
+*** 延时操作
+*** 定时器
+*** 任务调度器
+*** 串口初步
+*** SPI
 
