根据芯片手册特性，增加了几个练习的小目标。

--- a/README.org
+++ b/README.org
@@ -11,6 +11,12 @@
 - 7. 串口初步
 - 8. SPI
 - 9. 几种传感器的扩展
+- 10. SPI通信（从芯片手册上看到了这个芯片是由两个SPI通道的，可能已经有现成的库里，看一下是否可以自己编程使用一下）
+- 11. 计数器实现
+- 12. ADC
+- 13. IIC
+- 14. EEPROM
+- 15. FLASH
 ** 具体的工作实践
 *** arduino-001 资料以及工具的准备
 *** arduino-002 LED闪烁练习
