1. 增加了一些串口测试程序‘ 2. 更新了说明信息；

--- a/README.org
+++ b/README.org
@@ -19,4 +19,16 @@
 - 15. FLASH
 ** 具体的工作实践
 *** arduino-001 资料以及工具的准备
+- 芯片手册
+- pin脚定义
+- 串口驱动
+- 原理图
+- 参数表
 *** arduino-002 LED闪烁练习
+- LED闪烁代码
+*** arduino_003_serial 串口初步
+- 初始化
+- 打印
+- 格式化打印
+- 读取以及数据接收判断
+- 写入
