--- a/README.org
+++ b/README.org
@@ -25,6 +25,7 @@
 - 原理图
 - 参数表
 - 串口签名问题解决： https://blog.csdn.net/grey_csdn/article/details/89366882
+- 编译器、链接器工具探索以及芯片中断实现方式探索： https://blog.csdn.net/grey_csdn/article/details/89387763
 *** arduino-002 LED闪烁练习
 - LED闪烁代码
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89323445
