--- a/README.org
+++ b/README.org
@@ -4,17 +4,17 @@
 - Arduino是一个开源的软硬件平台，使用C++作为主要的编程语言，官方的IDE基于avr-g++。有现成的库可以使用芯片的各个功能，开发板可以方便扩展各种传感器以及执行器，可以快速设计自己的功能。
 - 使用的是AVR单片机，MacroChip的Atmega328PB，16MHZ的主频，32K FLASH，2K RAM、1KEEPROM。说起来，资源量还是不错的。
 ** TDL
-- 1. 找到原理图、开发工具
+- 1. 找到原理图、开发工具(DONE)
 - 2. 完成hello world的程序
-- 3. 完成LED的闪烁
+- 3. 完成LED的闪烁(DONE)
 - 4. 延时操作
-- 5. 定时器
-- 6. 任务调度器
-- 7. 串口初步
+- 5. 定时器(DONE)
+- 6. 任务调度器(DONE)
+- 7. 串口初步(DONE)
 - 8. SPI
 - 9. 几种传感器的扩展
 - 10. SPI通信（从芯片手册上看到了这个芯片是由两个SPI通道的，可能已经有现成的库里，看一下是否可以自己编程使用一下）
-- 11. 计数器实现
+- 11. 计数器实现(DONE)
 - 12. ADC
 - 13. IIC
 - 14. EEPROM
@@ -53,4 +53,7 @@
 - 一个粗糙的任务调度
 - 尝试了多文件管理
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89409407
+*** HardwareSerial
+- 串口探索，硬件串口库使用
+- 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89423432
 
