--- a/README.org
+++ b/README.org
@@ -13,11 +13,11 @@
 - 7. 串口初步(DONE)
 - 8. SPI(DONE)
 - 9. 几种传感器的扩展
-- 10. SPI通信（从芯片手册上看到了这个芯片是由两个SPI通道的，可能已经有现成的库里，看一下是否可以自己编程使用一下）
+- 10. SPI通信（从芯片手册上看到了这个芯片是由两个SPI通道的，可能已经有现成的库里，看一下是否可以自己编程使用一下）(DONE)
 - 11. 计数器实现(DONE)
 - 12. ADC(DONE)
 - 13. IIC
-- 14. EEPROM
+- 14. EEPROM(DONE)
 - 15. FLASH
 ** 具体的工作实践
 *** arduino_001 资料以及工具的准备
@@ -67,4 +67,6 @@
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89463092
 *** arduino_012 ADC
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89465120
+*** arduino_012 EEPROM
+- 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89480093
 
