--- a/README.org
+++ b/README.org
@@ -67,8 +67,10 @@
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89463092
 *** arduino_012 ADC
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89465120
-*** arduino_012 FEE EEPROM
+*** arduino_013 FEE EEPROM
 - 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89480093
-*** arduino_013 SD card
+*** arduino_014 SD card
 - 目前手中的板子不支持
+*** arduino_015 IIC
+- 总结测试博客地址：https://blog.csdn.net/grey_csdn/article/details/89504148
 
